--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,24 @@
-node_modules/
-/dist
-/build
-*.js
-*.js.map
-.vscode/
-
-# Logs and test coverage
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-coverage/
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
